feat: 🎸 調整 ChatGPT 範例

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>ChatGPT OpenAI 聊天室</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <link rel="stylesheet" href="./all.css">
@@ -26,8 +26,8 @@
               <hr />
               <form>
                 <div class="form-floating mt-3">
-                  <input type="text" class="form-control" id="promptInput" placeholder="開始聊天...">
-                  <label for="promptInput">開始聊天...</label>
+                  <input type="text" class="form-control" id="chatInput" placeholder="開始聊天...">
+                  <label for="chatInput">開始聊天...</label>
                 </div>
               </form>
             </div>
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 
