feat: 🎸 修正版型問題

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="col-4 border py-4">
           <h1 class="h4 text-center">OpenAI 聊天室</h1>
           <hr />
-          <div class="row h-600 overflow-y-auto">
+          <div class="row ">
             <div class="col-12">
-              <div id="chat" class="mb-4">
+              <div id="chat" class="mb-4 h-600 overflow-y-auto">
                 <div class="d-flex align-items-center mb-4">
                   <img src="./images/chatgpt-logo.png" class="chatLogo object-fit-cover rounded-circle" alt="" srcset="">
                   <p class="bg-body-secondary p-3 rounted m-0 rounded text-secondary">請開始你的聊天...</p>
