--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ChatGPT OpenAI 聊天室</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
-  <link rel="stylesheet" href="./all.css">
+  <link rel="stylesheet" href="./style/all.css">
   <body>
     <div class="container">
       <div class="row justify-content-center align-items-center h-100vh">
@@ -38,7 +38,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-
-    <script src="./all.js"></script>
+    <script>var exports = {};</script>
+    <script src="./js/all.js"></script>
   </body>
 </html>
